изменены все листы в метода на массивы исправлена работа findOlderAnimal